fix th and menu overlap on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -403,7 +403,7 @@ header {
           top: 100px;
           position: -webkit-sticky;
           position: sticky;
-          z-index: 1;
+          z-index: 0;
         }
       }
     }
